added build command for webpack

--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -14,5 +14,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ajahne/webpack-examples.git"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
